--- a/index.html
+++ b/index.html
@@ -8,60 +8,62 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
 
-  <body class="lightdark">
-    <header class="dark header">
-      <div class="text-centered">
+  <body class="lightdark"> <!--Assigns the lightdark class to the body of the webpage-->
+    <header class="dark header"> <!--Assigns the dark header class to the header container -->
+      <div class="text-centered"> <!--Centers the text within the header container-->
         <h1> Caleb Jordan </h1>
         <h3> Software Developer </h3>
       </div>
     </header>
 
     <main>
-      <div class="text-centered wrapper">
+      <div class="text-centered"> <!--Centers all text within the first container in the main section-->
         <img class="roundimage" src="images/head-shot.png" alt="Picture of Caleb Jordan" />
         <article>
           <h2> Howdy! I'm Caleb Jordan </h2>
           <p> I am a broadcast engineer and software developer in West Texas.
           <p> As a broadcast engineer, my software development interest are: </p>
-          <ul> <!--unorder list, will list with bullets-->
+          <ul> <!--unorder list, this will list the following li(list items) using bullet points-->
             <li> Automation, to give users more control of their broadcasting equipment.  </li>
             <li> Websites that provide streaming services for content creators. </li>
             <li> Working with others to provide a simple and easy solution for content creation. </li> 
           </ul>  
-          <p> Please have a look at my website and feel free to <a href="#contact">contact me! </a> <!-- When clicked will take user to contact info-->
+          <p class="large-font"> <!--Assignes the class large-font to the paragraph--> Please have a look at my website and feel free to <a href="#contact">contact me! </a> <!-- When contact me is clicked it will take users to the article named "contact"-->
         </article>
       </div>
 
       <hr>
 
-      <div class="text-centered wrapper">
+      <div class="text-centered wrapper"> <!--Centers text within this container-->
         <article>
           <h2> About Caleb </h2>
           <p> After working with automation as a news director and installing automation systems as a broadcast engineer, I fell in love with automation. While I enjoyed TV automation, I love online streaming services and the content that creators provide. I want to bring automation to those creators so that they can have even more control over their content creation. </p>
 
-          <p> As a student of <a href="https://www.thinkful.com/" target="_blank">Thinkful</a> <!--Opens new tab to Thinkful--> I've begun learning the steps necassary to achieve my goals. </p>
+          <p> As a student of <a href="https://www.thinkful.com/" target="_blank">Thinkful</a> <!--Clicking on the word Thinkgul will open a new tab to Thinkful's website. The target="_blank" attribute is what causes the link to open in a new tab--> I've begun learning the steps necassary to achieve my goals. </p>
 
-          <p> If you're looking to hire a new devolper who is no stranger to big projects please <a href="mailto:developer.calebXV@gmail.com?subject=Available%20Position%20for%20New%20Developer"> reach out.</a> <!--Opens a new email to developer.calebXV@gmail.com with the subject, "Available Position for New Developer"--> Or if you are looking to collab vist my <a href="https://github.com/DevloperCaleb" target="_blank">GitHub</a> </p> <!--Opens new tab to GitHub-->
+          <p> In my free time I like to fool around with 3D-printing. I use both FDM and Resin printers, sometimes I make useful things but mostly miniature scaled models. Which leads to my other primary hobby which is table top gaming with the miniatures I print. It's an extremely fun and rewarding hobby to do with friends. </p>
+
+          <p> If you're looking to hire a new devolper who is no stranger to big projects please <a href="mailto:developer.calebXV@gmail.com?subject=Available%20Position%20for%20New%20Developer"> reach out.</a> <!--Clicking "reach out." Opens the users default email application and begins a new email to the address developer.calebXV@gmail.com with the subject line, "Available Position for New Developer"--> Or if you are looking to collab vist my <a href="https://github.com/DevloperCaleb" target="_blank">GitHub</a> </p> <!--Clicking "Github" opens a new tab to the Github page DevloperCaleb. The target="_blank" attribute is what causes the link to open in a new tab-->
         </article>
       </div>
 
       <hr>
 
-      <div class="text-centered wrapper">
-        <article id="contact">
-          <h2 class="text-centered"> Contact Caleb </h2>
-          <p class="text-centered"> I'd love to work together </p>
-          <ol> <!--ordered list that will order numerically-->
-            <li> <a href="https://www.linkedin.com/in/caleb-jordan-460113207/" target="_blank">LinkedIn</a> <!--Opens new tab to LinkedIn--></li>
-            <li> <a href="https://github.com/DevloperCaleb" target="_blank">GitHub</a> <!--Opens new tab to GitHub--></li>
+      <div class="text-centered"><!--Centers text within the container-->
+        <article id="contact"> <!--assigns this container the name "contact" which is called on line 31-->
+          <h2 class="text-centered"><!--Centers text within the container--> Contact Caleb </h2>
+          <p class="text-centered large-font"> I'd love to work together </p>
+          <ol> <!--ordered list that will order the following li(list items) numerically-->
+            <li> <a href="https://www.linkedin.com/in/caleb-jordan-460113207/" target="_blank">LinkedIn</a> <!--Clicking "LinkedIn" opens a new tab to Caleb Jordans LinkedIn. The target="_blank" attribute is what causes the link to open in a new tab-->--></li>
+            <li> <a href="https://github.com/DevloperCaleb" target="_blank">GitHub</a> <!--Clicking "Github" opens a new tab to the Github page DevloperCaleb. The target="_blank" attribute is what causes the link to open in a new tab--></li>
           </ol>  
         </article>
       </div>
     </main>
 
-    <footer class="dark footer">
-      <div>
-        <p class="text-centered"> © Caleb Jordan </p>
+    <footer class="dark footer"><!--Assigns the class dark footer to the footer contrainer-->
+      <div class="text-centered"><!--Centers text within the container-->
+        <p> © Caleb Jordan </p>
       </div>
     </footer>
 
