--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <h2 class="text-centered"><!--Centers text within the container--> Contact Caleb </h2>
           <p class="text-centered large-font"> I'd love to work together </p>
           <ol> <!--ordered list that will order the following li(list items) numerically-->
-            <li> <a href="https://www.linkedin.com/in/caleb-jordan-460113207/" target="_blank">LinkedIn</a> <!--Clicking "LinkedIn" opens a new tab to Caleb Jordans LinkedIn. The target="_blank" attribute is what causes the link to open in a new tab-->--></li>
+            <li> <a href="https://www.linkedin.com/in/caleb-jordan-460113207/" target="_blank">LinkedIn</a> <!--Clicking "LinkedIn" opens a new tab to Caleb Jordans LinkedIn. The target="_blank" attribute is what causes the link to open in a new tab--></li>
             <li> <a href="https://github.com/DevloperCaleb" target="_blank">GitHub</a> <!--Clicking "Github" opens a new tab to the Github page DevloperCaleb. The target="_blank" attribute is what causes the link to open in a new tab--></li>
           </ol>  
         </article>
